path_finding/static/styles.css
:root {
    --empty-node-color: white;
    --wall-node-color: black;
    --start-node-color: green;
    --end-node-color: red;
    --visited-node-color: yellow;
    --visiting-node-color: orange;
    --path-node-color: blue;
    --weight-node-color: purple;
    --weight-node-color-min: rgba(128, 0, 128, 0.25);
    --weight-node-color-mid: rgba(128, 0, 128, 0.5);
    --weight-node-color-max: rgba(128, 0, 128, 0.75);
}

.grid-wrapper {
    table-layout: fixed;
    border-collapse: collapse;
    display: inline-table;
}

.algorithm-grid {
    border: 1px solid #000000;
    border-width: 1px 0 0 1px;
}

.node {
    border: 1px solid #000000;
    border-width: 0 1px 1px 0;
    width: 20px;
    height: 20px;
    min-width: 20px;
    min-height: 20px;
    padding: 0px;
}

.node.empty {
    background-color: var(--empty-node-color);
}

.node.animatedEmpty {
    animation-name: toEmpty;
    animation-duration: 1s;
    animation-timing-function: ease-in;
    animation-delay: -0.75s;
}

.node.wall {
    background-color: var(--wall-node-color);
}

.node.animatedWall {
    animation-name: toWall;
    animation-duration: 1s;
    animation-timing-function: ease-in;
    animation-delay: -0.75s;
}

.node.weight {
    background-color: var(--weight-node-color);
}

.node.animatedWeight {
    animation-name: toWeight;
    animation-duration: 1s;
    animation-timing-function: ease-in;
    animation-delay: -0.75s;
}

.node.start {
    background-color: var(--start-node-color);
}

.node.end {
    background-color: var(--end-node-color);
}

.node.visited {
    background-color: var(--visited-node-color);
    animation-name: toVisited;
    animation-duration: 1s;
    animation-timing-function: ease-out;
}

.node.visiting {
    background-color: var(--visiting-node-color);
    animation-name: toVisiting;
    animation-duration: 1s;
    animation-timing-function: ease-out;
}

.node.path {
    background-color: var(--path-node-color);
    animation-name: toPath;
    animation-duration: 3s;
}

.sample-empty-node {
    background-color: var(--empty-node-color);
    border: 1px solid black;
    border-width: 1px;
}

.sample-wall-node {
    background-color: var(--wall-node-color);
    border: 0px solid black;
    border-width: 0px;
}

.sample-weight-node {
    background-color: var(--weight-node-color-mid);
    border: 0px solid black;
    border-width: 0px;
}

.sample-start-node {
    background-color: var(--start-node-color);
    border: 0px solid black;
    border-width: 0px;
}

.sample-end-node {
    background-color: var(--end-node-color);
    border: 0px solid black;
    border-width: 0px;
}

.sample-visited-node {
    background-color: var(--visited-node-color);
    border: 0px solid black;
    border-width: 0px;
}

.sample-visiting-node {
    background-color: var(--visiting-node-color);
    border: 0px solid black;
    border-width: 0px;
}

.sample-path-node {
    background-color: var(--path-node-color);
    border: 0px solid black;
    border-width: 0px;
}

@keyframes toVisited {
    from {
        background-color: var(--visiting-node-color);
    }
    to {
        background-color: var(--visited-node-color);
    }
}

@keyframes toVisiting {
    from {
        background-color: var(--visiting-node-color);
        transform: scale(0.1);
        border-radius: 100%;
    }
    to {
        transform: scale(1);
    }
}

@keyframes toPath {
    from {
        background-color: var(--empty-node-color);
        transform: rotateZ(0deg) scale(0.1);
    }
    to {
        background-color: var(--path-node-color);
        transform: rotateZ(360deg) scale(1);
    }
}

@keyframes toWall {
    from {
        background-color: var(--empty-node-color);
        transform: scale(0.1);
        border-radius: 100%;
    }

    to {
        background-color: var(--wall-node-color);
        transform: scale(1);
    }
}

@keyframes toEmpty {
    from {
        background-color: var(--wall-node-color);
        transform: scale(1);
    }
    to {
        background-color: var(--empty-node-color);
        transform: scale(0.1);
        border-radius: 100%;
    }
}

@keyframes toWeight {
    from {
        background-color: var(--empty-node-color);
        transform: scale(0.1);
        border-radius: 100%;
    }

    to {
        background-color: var(--weight-node-color);
        transform: scale(1);
    }
}

#innerWeightSlider .slider-tick {
    background: rgba(255, 255, 255, 0);
    border-radius: 0%;
    width: 0px;
    height: 0px;
}

#innerWeightSlider .tick-slider-selection {
    background: none;
}

#innerWeightSlider .slider-track {
    background: linear-gradient(to right, var(--weight-node-color-min), var(--weight-node-color-max));
}

#innerWeightSlider .slider-handle {
    background: black;
}

